@@ -406,6 +406,7 @@ export("quadrat.test.ppp")
 export("quadrat.test.quadratcount")
 export("quadrat.test.splitppp")
 export("quantile.density")
+export("radcumint")
 export("range.fv")
 export("range.ssf")
 export("[.rat")
